<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:weightSum="2">
        <TextView
            android:layout_weight="1"
            android:id="@+id/tvInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:maxLength="12"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_weight="1"
            android:id="@+id/tvResult"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:text="@string/result"
            android:textSize="40sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="5">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/btnSeven"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_7"
                android:textSize="40sp"
                android:textStyle="bold"
                tools:ignore="ButtonStyle,NestedWeights" />

            <Button
                android:id="@+id/btnEight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_8"
                android:textSize="40sp"
                android:textStyle="bold"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnNine"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_9"
                android:textSize="40sp"
                android:textStyle="bold"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnDivision"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/division"
                android:textSize="40sp"
                android:textStyle="bold"
                tools:ignore="ButtonStyle" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/btnFour"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_4"
                android:textSize="40sp"
                android:textStyle="bold"
                tools:ignore="ButtonStyle,NestedWeights" />

            <Button
                android:id="@+id/btnFive"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_5"
                android:textSize="40sp"
                android:textStyle="bold"
                tools:ignore="ButtonStyle,NestedWeights" />

            <Button
                android:id="@+id/btnSix"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_6"
                android:textSize="40sp"
                android:textStyle="bold"
                tools:ignore="ButtonStyle,NestedWeights" />

            <Button
                android:id="@+id/btnProduct"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/product"
                android:textSize="40sp"
                android:textStyle="bold"
                tools:ignore="ButtonStyle" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/btnOne"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_1"
                android:textSize="40sp"
                android:textStyle="bold"
                tools:ignore="ButtonStyle,NestedWeights" />

            <Button
                android:id="@+id/btnTwo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_2"
                android:textSize="40sp"
                android:textStyle="bold"
                tools:ignore="ButtonStyle,NestedWeights" />

            <Button
                android:id="@+id/btnThree"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_3"
                android:textSize="40sp"
                android:textStyle="bold"
                tools:ignore="ButtonStyle,NestedWeights" />

            <Button
                android:id="@+id/btnDifference"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/difference"
                android:textSize="40sp"
                android:textStyle="bold"
                tools:ignore="ButtonStyle,NestedWeights" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/btnZero"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_0"
                android:textSize="40sp"
                android:textStyle="bold"
                tools:ignore="ButtonStyle,NestedWeights" />

            <Button
                android:id="@+id/btnClear"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/clr"
                android:textSize="40sp"
                android:textStyle="bold"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnSum"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sum"
                android:textSize="40sp"
                android:textStyle="bold"
                tools:ignore="ButtonStyle,NestedWeights" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnResult"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/equal"
                android:textSize="40sp"
                android:textStyle="bold"
                tools:ignore="ButtonStyle,NestedWeights" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>